# emulator

./: .gitignore  AGENTS.md  boundary_bias_hypothesis_manifest.csv  boundary_info_hypothesis_manifest.csv  boundary_stencil_hypothesis_manifest.csv  experiment_list.md  experiments.md  experiments_double_gyre_2x_fine.md  experiments_double_gyre_shifting_wind.md  experiments_double_gyre_shifting_wind_2layer.md  future_directions.md  graph_hypothesis_manifest.csv  graph_v2_hypothesis_manifest.csv  hardening.md  hypothesis_manifest.csv  methods.md  padding_hypothesis_manifest.csv  program.md  pyproject.toml  results.md  shiftconv_hypothesis_manifest.csv  skystatus.py  spectral_damping_hypothesis_manifest.csv  working_hypotheses.md  working_hypotheses_boundary_bias_batch.md  working_hypotheses_boundary_stencil_batch.md  working_hypotheses_graph_batch.md  working_hypotheses_graph_v2_batch.md  working_hypotheses_padding_batch.md  working_hypotheses_shiftconv_batch.md  working_hypotheses_spectral_damping_batch.md
hypotheses/: h07.md
scripts/: create_hypothesis_branches.sh  make_rollout_animation.sh  run_boundary_bias_hypotheses.sh  run_boundary_conv_hypotheses.sh  run_boundary_info_hypotheses.sh  run_boundary_stencil_hypotheses.sh  run_dgsw2l_batchsize_followup_40ep.sh  run_dgsw2l_curriculum_followup_40ep.sh  run_dgsw2l_incumbent_100ep.sh  run_dgsw2l_incumbent_100ep_no_transition.sh  run_dgsw2l_outputsteps_curriculum_ablation.sh  run_graph_hypotheses.sh  run_graph_v2_hypotheses.sh  run_h01_h03_branch_sequence.sh  run_hypothesis_branch_sequence.sh  run_padding_hypotheses.sh  (+2 more)
(+321 files in other folders)
